Try to fix overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 body {
+  position: relative;
   overflow-y: hidden;
 }
 
